--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                     <h5>Web Development : <span>HTML, CSS, JS, React, Bootstrap</span></h4>
                                 </div>
                                 <div class="skill-item">
-                                    <h5>Application Development : <span>Java, JavaSwing, ApacheNetbeans</span></h4>
+                                    <h5>Application Development : <span>Java, JavaSwing, ApacheNetbeans, C++, C</span></h4>
                                 </div>
                                 <div class="skill-item">
                                     <h5>Database : <span>MySQL, Firebase</span></h4>
