--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="home-info padd-15">
                         <h3 class="hello">Hello, my name is <span class="name">Jackson Bhakti Gusman</span></h3>
                         <h3 class="my-profession">I'm a <span class="typing">UI/UX Designer</span></h3>
-                        <p>I’m a 3rd year Computer Science student at BINUS University. My expertise is to create website and mobile design, mobile application, training & testing model, and many more...</p>
+                        <p>I’m a 3rd year Computer Science student at BINUS University. My expertise is to training and testing model, create website and mobile design, mobile application, and many more...</p>
                         <a href="#about" data-section-index="0" class="btn more-about-me">More About Me</a>
                     </div>
                     <div class="home-img padd-15">
@@ -72,7 +72,7 @@
                         <div class="row">
                             <div class="about-text padd-15">
                                 <h3>I'm Jackson Bhakti Gusman and <span class="typings">UI/UX Designer</span></h3>
-                                <p>I’m a 3rd year Computer Science student majoring in Intelligent System at BINUS University. I'm enthusiastic in tech, data and making design that prioritize the user’s needs. Currently open to exploring internship opportunities and eager to connect with individuals who share my excitement for technology and data.</p>
+                                <p>I’m a 3rd year Computer Science student majoring in Intelligent System at BINUS University. I'm enthusiastic in data especially in machine learning and computer vision, tech and making design that prioritize the user’s needs. I like to work with a team, am adaptive to all current situation. Currently open to exploring internship opportunities and eager to connect with individuals who share my excitement for technology and data.</p>
                             </div>
                         </div>
                         <div class="row">
