--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <div class="row">
                     <div class="home-info padd-15">
                         <h3 class="hello">Hello, my name is <span class="name">Jackson Bhakti Gusman</span></h3>
-                        <h3 class="my-profession">I'm a <span class="typing">UI/UX Designer</span></h3>
+                        <h3 class="my-profession">I'm a <span class="typing">Software Engineering</span></h3>
                         <p>I’m a 3rd year Computer Science student at BINUS University. My expertise is to training and testing model, create website and mobile design, mobile application, and many more...</p>
                         <a href="#about" data-section-index="0" class="btn more-about-me">More About Me</a>
                     </div>
@@ -71,7 +71,7 @@
                     <div class="about-content padd-15">
                         <div class="row">
                             <div class="about-text padd-15">
-                                <h3>I'm Jackson Bhakti Gusman and <span class="typings">UI/UX Designer</span></h3>
+                                <h3>I'm Jackson Bhakti Gusman and <span class="typings">Software Engineeringr</span></h3>
                                 <p>I’m a 3rd year Computer Science student majoring in Intelligent System at BINUS University. I'm enthusiastic in data especially in machine learning and computer vision, tech and making design that prioritize the user’s needs. I like to work with a team, am adaptive to all current situation. Currently open to exploring internship opportunities and eager to connect with individuals who share my excitement for technology and data.</p>
                             </div>
                         </div>
