--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackson Bhakti Gusman</title>
+    <link rel="icon" type="images/png" href="images/profilepicture.jpg"/>
 
     <!-- CSS FILES -->
     <link rel="stylesheet" href="css/style.css">
@@ -45,8 +46,8 @@
                 <div class="row">
                     <div class="home-info padd-15">
                         <h3 class="hello">Hello, my name is <span class="name">Jackson Bhakti Gusman</span></h3>
-                        <h3 class="my-profession">I'm a <span class="typing">Software Engineering</span></h3>
-                        <p>I’m a 3rd year Computer Science student at BINUS University. My expertise is to training and testing model, create website and mobile design, mobile application, and many more...</p>
+                        <h3 class="my-profession">I'm a <span class="typing">UI/UX Designer</span></h3>
+                        <p>I’m a 3rd year Computer Science student at BINUS University. My expertise is to create website and mobile design, mobile application, training & testing model, and many more...</p>
                         <a href="#about" data-section-index="0" class="btn more-about-me">More About Me</a>
                     </div>
                     <div class="home-img padd-15">
@@ -71,8 +72,8 @@
                     <div class="about-content padd-15">
                         <div class="row">
                             <div class="about-text padd-15">
-                                <h3>I'm Jackson Bhakti Gusman and <span class="typings">Software Engineeringr</span></h3>
-                                <p>I’m a 3rd year Computer Science student majoring in Intelligent System at BINUS University. I'm enthusiastic in data especially in machine learning and computer vision, tech and making design that prioritize the user’s needs. I like to work with a team, am adaptive to all current situation. Currently open to exploring internship opportunities and eager to connect with individuals who share my excitement for technology and data.</p>
+                                <h3>I'm Jackson Bhakti Gusman and <span class="typings">UI/UX Designer</span></h3>
+                                <p>I’m a 3rd year Computer Science student majoring in Intelligent System at BINUS University. I'm enthusiastic in tech, data and making design that prioritize the user’s needs. Currently open to exploring internship opportunities and eager to connect with individuals who share my excitement for technology and data.</p>
                             </div>
                         </div>
                         <div class="row">
@@ -109,7 +110,7 @@
                                     <h5>Web Development : <span>HTML, CSS, JS, React, Bootstrap</span></h4>
                                 </div>
                                 <div class="skill-item">
-                                    <h5>Application Development : <span>Java, JavaSwing, ApacheNetbeans, C++, C</span></h4>
+                                    <h5>Application Development : <span>Java, JavaSwing, ApacheNetbeans, C++, C, Kotlin</span></h4>
                                 </div>
                                 <div class="skill-item">
                                     <h5>Database : <span>MySQL, Firebase</span></h4>
@@ -274,6 +275,19 @@
                             </div>
 
                             <div class="portfolio-box">
+                                <img src="images/clickbait.png" alt="">
+                                <div class="portfolio-layer">
+                                    <h6>Exploring The Performance of XLNet and BiLSTM Models For Clickbait Detection In Online News Headlines: A Comparative Study</h6>
+                                    <h5>Final Project NLP Course (2023)</h5>
+                                    <p>A Natural Language Processing Project presents a comparative analysis of the training and testing results obtained from two different models, BiLSTM and XLNet for detecting clickbait using Online News Dataset, which was retrieved from Kaggle. </p>
+                                    <div class="portfolio-horizontal">
+                                        <a href="https://github.com/Jacksonbg03/XLNet-and-BiLSTM-models-for-clickbait-detection"><i class="fa fa-code" aria-hidden="true"></i></a>
+                                        <a href="https://drive.google.com/file/d/1J4EzP3HciYL5CDuLtwk1G196K47nxqiH/view?usp=sharing"><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="portfolio-box">
                                 <img src="images/byt.png" alt="">
                                 <div class="portfolio-layer">
                                     <h7>Book Your Teacher</h7>
@@ -291,7 +305,7 @@
                             <div class="portfolio-layer">
                                 <h4>Recipedia</h4>
                                 <h5>On Going - Project</h5>
-                                <p>Recipedia is a food recipe information application that aims to help user to search the recipe they want. Made with Android Studio, Java, XML and Firebase.</p>
+                                <p>Recipedia is a food recipe information application that aims to help user to search the recipe they want. Made with Android Studio, Kotlin, XML and Firebase.</p>
                                 <div class="portfolio-horizontal">
                                     <a href="#"><i class="fa fa-code" aria-hidden="true"></i></a>
                                     <a href="#"><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
@@ -404,7 +418,7 @@
         <!-- Contact Section End-->
     </div>
 
-    <!---->
+    
 
     <!-- Style Switchet Start-->
     <div class="style-switcher">
