--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                                 <p>Recipedia is a food recipe information application that aims to help user to search the recipe they want. Made with Android Studio, Kotlin, XML and Firebase.</p>
                                 <div class="portfolio-horizontal">
                                     <a href="#"><i class="fa fa-code" aria-hidden="true"></i></a>
-                                    <a href="#"><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
+                                    <a href="https://www.youtube.com/watch?v=n87tj0DV_Ms&t=2s"><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
