--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                             <img src="images/recipedia.png" alt="">
                             <div class="portfolio-layer">
                                 <h4>Recipedia</h4>
-                                <h5>On Going - Project</h5>
+                                <h5>Final Project Entre Course (2023)</h5>
                                 <p>Recipedia is a food recipe information application that aims to help user to search the recipe they want. Made with Android Studio, Kotlin, XML and Firebase.</p>
                                 <div class="portfolio-horizontal">
                                     <a href="#"><i class="fa fa-code" aria-hidden="true"></i></a>
@@ -325,6 +325,19 @@
                         </div>
                     </div>
                 </div>
+
+                    <div class="portfolio-box">
+                        <img src="images/school.png" alt="">
+                        <div class="portfolio-layer">
+                            <h7>School Website</h7>
+                            <h5>Work Project - On Going</h5>
+                            <p>School website that made using HTML, CSS, JS, PHP, MySQL, VueJs, ASP.NET</p>
+                            <div class="portfolio-horizontal">
+                                <a href="#><i class="fa fa-code" aria-hidden="true"></i></a>
+                                <a href="#><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
+                        </div>
+                    </div>
+                </div>    
                     </div>
                 </div>
             </div>
