--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
                             <h5>Work Project - On Going</h5>
                             <p>School website that made using HTML, CSS, JS, PHP, MySQL, VueJs, ASP.NET</p>
                             <div class="portfolio-horizontal">
-                                <a href="#><i class="fa fa-code" aria-hidden="true"></i></a>
-                                <a href="#><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
+                                <a href="#"><i class="fa fa-code" aria-hidden="true"></i></a>
+                                <a href="#"><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>    
