--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 </div>
                                 <div class="row">
                                     <div class="buttons padd-15">
-                                        <a href="images/ATS_CV_Jackson_Bhakti_Gusman.pdf" download class="btn">Download CV</a>
+                                        <a href="" download class="btn">Download CV</a>
                                         <a href="#contact" data-section-index="1" class="btn hire-me">Hire Me</a>
                                     </div>
                                 </div>
