--- a/index.html
+++ b/index.html
@@ -325,6 +325,33 @@
                             </div>
                         </div>
                     </div>
+
+                    <div class="portfolio-box">
+                        <img src="images/tumorcnn.png" alt="">
+                        <div class="portfolio-layer">
+                            <h3>Brain Tumor Detection using CNN</h3>
+                            <h5>Final Project Deep Learning (2024)</h5>
+                            <p>A Deep Learning Project presents the exploration the use of CNN to detect brain tumor from brain scan images. The dataset was obtained from Kaggle which consists of images categorized as healthy or affected by a brain tumor</p>
+                            <div class="portfolio-horizontal">
+                                <a href="https://github.com/Jacksonbg03/Brain-Tumor-Detection-using-CNN"><i class="fa fa-code" aria-hidden="true"></i></a>
+                                <a href="https://drive.google.com/file/d/16I7cRfe118BifyMHW7sKtIQzuQv7zl-a/view?usp=sharing"><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="portfolio-box">
+                        <img src="images/haarcascade.png" alt="">
+                        <div class="portfolio-layer">
+                            <h3>Face Recognition Football Player using Haar Cascade</h3>
+                            <h5>Final Project Computer Vision (2024)</h5>
+                            <p>A Computer Vision Project demonstrates the feasibility of using Haar Cascade algorithm for face recognition in the context of football players. The dataset was given by Assistant Lab BINUS which consists of football playerss face images </p>
+                            <div class="portfolio-horizontal">
+                                <a href="https://github.com/Jacksonbg03/Face-Recognition-Football-Player-using-Haar-Cascade"><i class="fa fa-code" aria-hidden="true"></i></a>
+                                <a href="#"><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                        
                 </div>
             </div>
         </section>
