--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                     <h5>Web Development : <span>HTML, CSS, JS, React, Bootstrap</span></h4>
                                 </div>
                                 <div class="skill-item">
-                                    <h5>Application Development : <span>Java, JavaSwing, ApacheNetbeans, C++, C, Kotlin</span></h4>
+                                    <h5>Application Development : <span>Java, JavaSwing, ApacheNetbeans, C++, C</span></h4>
                                 </div>
                                 <div class="skill-item">
                                     <h5>Database : <span>MySQL, Firebase</span></h4>
@@ -305,7 +305,7 @@
                             <div class="portfolio-layer">
                                 <h4>Recipedia</h4>
                                 <h5>Final Project Entre Course (2023)</h5>
-                                <p>Recipedia is a food recipe information application that aims to help user to search the recipe they want. Made with Android Studio, Kotlin, XML and Firebase.</p>
+                                <p>Recipedia is a food recipe information application that aims to help user to search the recipe they want. Made with Android Studio, Java, XML and Firebase.</p>
                                 <div class="portfolio-horizontal">
                                     <a href="#"><i class="fa fa-code" aria-hidden="true"></i></a>
                                     <a href="https://www.youtube.com/watch?v=n87tj0DV_Ms&t=2s"><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
