next update project and profile

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jackson Bhakti Gusman</title>
-    <link rel="icon" type="images/png" href="images/profilepicture.jpg"/>
+    <link rel="icon" type="images/png" href="images/profilepicture2.jpg"/>
 
     <!-- CSS FILES -->
     <link rel="stylesheet" href="css/style.css">
@@ -51,7 +51,7 @@
                         <a href="#about" data-section-index="0" class="btn more-about-me">More About Me</a>
                     </div>
                     <div class="home-img padd-15">
-                        <img src="images/profilepicture.jpg" alt="">
+                        <img src="images/profilepicture2.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -73,14 +73,14 @@
                         <div class="row">
                             <div class="about-text padd-15">
                                 <h3>I'm Jackson Bhakti Gusman and <span class="typings">UI/UX Designer</span></h3>
-                                <p>I’m a 3rd year Computer Science student majoring in Intelligent System at BINUS University. I'm enthusiastic in tech, data and making design that prioritize the user’s needs. Currently open to exploring internship opportunities and eager to connect with individuals who share my excitement for technology and data.</p>
+                                <p>I’m a Computer Science fresh graduate majoring in Intelligent Systems from BINUS University. I’m passionate about developing well-structured and scalable applications, with a strong focus on Python and Artificial Intelligence. I enjoy building impactful and efficient software solutions, exploring AI driven technologies, collaborating in teams, and continuously learning to adapt to new challenges.</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="personal-info padd-15">
                                 <div class="row">
                                     <div class="info-item padd-15">
-                                        <p>Age : <span>20</span></p>
+                                        <p>Age : <span>22</span></p>
                                     </div>
 
                                     <div class="info-item padd-15">
@@ -342,7 +342,17 @@
                         </div>
                     </div> -->
 
-                    
+                    <div class="portfolio-box">
+                        <img src="images/all-resnet-transformer.png" alt="">
+                        <div class="portfolio-layer">
+                            <h6>Hybrid deep learning model for ALL detection using ResNet-50 and Vision Transformer.</h6>
+                            <p>Published in Procedia Computer Science (2025). Hybrid deep learning model for Acute Lymphoblastic Leukemia detection using ResNet 50 and Vision Transformer with 98% accuracy.</p>
+                            <div class="portfolio-horizontal">
+                                <a href="#"><i class="fa fa-code" aria-hidden="true"></i></a>
+                                <a href="https://www.sciencedirect.com/science/article/pii/S1877050925026973"><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
+                            </div>
+                        </div>
+                    </div>
                     <div class="portfolio-box">
                         <img src="images/jbgalgo.png" alt="">
                         <div class="portfolio-layer">
@@ -362,7 +372,7 @@
                             <p>JPBank is a modern banking platform showcasing our services, solutions, and company profile for customers and partners. Made with React, TailwindCSS, FramerMotion</p>
                             <div class="portfolio-horizontal">
                                 <a href="#"><i class="fa fa-code" aria-hidden="true"></i></a>
-                                <a href="https://jbgalgo.onrender.com"><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
+                                <a href="https://jpbank-jbg.vercel.app/"><i class="fa fa-globe-europe" aria-hidden="true"></i></a>
                             </div>
                         </div>
                     </div>
